resources/apps/namespace.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: apps
  labels:
    istio-injection: enabled
