resources/apps/users.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: users-rest-svc
  labels:
    app: users-rest
spec:
  ports:
    - name: http
      port: 3101
      targetPort: 3101
  selector:
    app: users-rest
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: users-rest
spec:
  replicas: 1
  selector:
    matchLabels:
      app: users-rest
  template:
    metadata:
      labels:
        app: users-rest
    spec:
      containers:
        - image: zalbiraw/go-api-test-service:v2.0
          imagePullPolicy: IfNotPresent
          name: users-rest
          command:
            - ./services/rest/users/server
          ports:
            - containerPort: 3101
