resources/apps/httpbin.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: httpbin
spec:
  replicas: 1
  selector:
    matchLabels:
      app: httpbin
      version: v1
  template:
    metadata:
      labels:
        app: httpbin
        version: v1
    spec:
      containers:
        - image: zalbiraw/go-httpbin
          imagePullPolicy: IfNotPresent
          name: httpbin
          ports:
            - containerPort: 8080
          securityContext:
            runAsNonRoot: true
            allowPrivilegeEscalation: false
            capabilities:
              drop:
                - ALL
            seccompProfile:
              type: RuntimeDefault
---
apiVersion: v1
kind: Service
metadata:
  name: httpbin-svc
  labels:
    app: httpbin
spec:
  ports:
    - name: http
      port: 8000
      targetPort: 8080
  selector:
    app: httpbin
---
apiVersion: tyk.tyk.io/v1alpha1
kind: SecurityPolicy
metadata:
  name: no-operation
spec:
  name: no-operation
  state: active
  active: true
  access_rights_array:
    - name: no-operation
      namespace: applications
      versions:
        - Default
---
apiVersion: tyk.tyk.io/v1alpha1
kind: SecurityPolicy
metadata:
  name: httpbin-admins
spec:
  name: httpbin-admins
  state: active
  active: true
  access_rights_array:
    - name: httpbin-keycloak
      namespace: applications
      versions:
        - Default
---
apiVersion: tyk.tyk.io/v1alpha1
kind: SecurityPolicy
metadata:
  name: httpbin-developers
spec:
  name: httpbin-developers
  state: active
  active: true
  access_rights_array:
    - name: httpbin-keycloak
      namespace: applications
      versions:
        - Default
      allowed_urls:
        - url: /xml
          methods:
            - GET
