resources/apps/ingress.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: tyk-gateway
  namespace: apps
spec:
  selector:
    istio: ingressgateway # use istio default controller
  servers:
  - port:
      number: 80
      name: http
      protocol: HTTP
    hosts:
    - "*"
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: tyk-gateway
  namespace: apps
spec:
  hosts:
  - "*"
  gateways:
  - tyk-gateway
  http:
  - match:
    - uri:
        prefix: /
    rewrite:
        uri: "/"
    route:
    - destination:
        host: gateway-svc-tyk-stack-tyk-gateway.tyk.svc.cluster.local
        port:
          number: 8080
